Start working on form, a bit stuck on the buttons will fix tommorow

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,140 @@
+.complaints-form-modal {
+  width: 95vw;
+  height: 95vh;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  padding-block: 4rem;
+  z-index: 10;
+  overflow: hidden;
+}
+.complaints-form-modal #close-modal {
+  position: fixed !important;
+  top: 2rem;
+  right: 2rem;
+  z-index: 1000;
+}
+.complaints-form-modal .complaints-column {
+  max-width: 900px;
+  margin: auto;
+  max-height: 80vh;
+  overflow-y: scroll;
+}
+.complaints-form-modal .complaints-column .complaints-content p {
+  margin: auto;
+  margin-block: 1rem;
+}
+.complaints-form-modal .complaints-column .complaints-content h2 {
+  max-width: 18ch;
+  margin-block-end: 2rem;
+}
+.complaints-form-modal .complaints-column .complaints-content button {
+  margin-block-start: 2rem;
+}
+.complaints-form-modal .complaints-column .complaints-form {
+  width: 100%;
+}
+.complaints-form-modal .complaints-column .complaints-form button {
+  margin-inline-start: 2rem;
+  pointer-events: all;
+}
+.complaints-form-modal .complaints-column .complaints-form button.submit {
+  pointer-events: all;
+}
+.complaints-form-modal .complaints-column .complaints-form button.submit.submit-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+.complaints-form-modal .complaints-column .complaints-form button.submit-hidden {
+  opacity: 0;
+  pointer-events: none;
+  display: none;
+}
+.complaints-form-modal .complaints-column .complaints-form form {
+  margin-block: 4rem;
+  overflow-x: hidden;
+  overflow-y: visible !important;
+  padding-block: 2rem;
+  width: 100%;
+  padding-inline: 2rem;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  min-width: 100%;
+  gap: 2rem;
+}
+.complaints-form-modal .complaints-column .complaints-form form .tab-container {
+  display: flex;
+  align-items: center;
+  min-width: 100%;
+  gap: 2rem;
+  width: 200%;
+  transition: 300ms ease;
+}
+.complaints-form-modal .complaints-column .complaints-form form .tab-container.form-next-page {
+  transform: translateX(calc(-100% - 2rem));
+  transition: 300ms ease;
+}
+.complaints-form-modal .complaints-column .complaints-form form .tab {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 100%;
+  gap: 1.5rem;
+  width: 100%;
+  min-width: 100%;
+}
+.complaints-form-modal .complaints-column .complaints-form form .tab fieldset {
+  display: flex;
+  flex-direction: column;
+  border: none;
+  align-items: flex-start;
+  position: relative;
+  width: 100%;
+}
+.complaints-form-modal .complaints-column .complaints-form form .tab fieldset:nth-child(3) {
+  grid-column: span 2;
+}
+.complaints-form-modal .complaints-column .complaints-form form .tab fieldset label {
+  position: absolute;
+  left: 0.75rem;
+  top: 0.75rem;
+  text-align: left;
+  padding: 0;
+  margin: 0;
+  transition: 300ms ease;
+}
+.complaints-form-modal .complaints-column .complaints-form form .tab fieldset input {
+  padding: 0.75rem;
+  width: 100%;
+}
+.complaints-form-modal .complaints-column .complaints-form form .tab fieldset input::-moz-placeholder {
+  color: transparent;
+}
+.complaints-form-modal .complaints-column .complaints-form form .tab fieldset input::placeholder {
+  color: transparent;
+}
+.complaints-form-modal .complaints-column .complaints-form form .tab fieldset input:not(:-moz-placeholder-shown) + label {
+  /* Move the label above the button and scale it down */
+  transform: translate(-0.75rem, -160%) scale(0.75);
+  transform-origin: left;
+}
+.complaints-form-modal .complaints-column .complaints-form form .tab fieldset input:focus + label,
+.complaints-form-modal .complaints-column .complaints-form form .tab fieldset input:not(:placeholder-shown) + label {
+  /* Move the label above the button and scale it down */
+  transform: translate(-0.75rem, -160%) scale(0.75);
+  transform-origin: left;
+}
+
+dialog::backdrop {
+  background-image: linear-gradient(#000000, #000000);
+  width: 100vw;
+  height: 100vh;
+  opacity: 0.5;
+}
+
 @font-face {
   font-family: brandon;
   src: url(../2MASS-J1808-Normal-_personal-use_.ttf);
@@ -78,7 +215,7 @@ h1 {
   transition: clip-path 300ms ease-in-out, -webkit-clip-path 300ms ease-in-out;
 }
 h1 span {
-  color: #55B8FF;
+  color: #55b8ff;
   font-style: italic !important;
   font-weight: 400;
 }
@@ -97,7 +234,7 @@ h2 {
   font-weight: 200;
 }
 h2 span {
-  color: #55B8FF;
+  color: #55b8ff;
   font-style: italic !important;
   font-weight: 400;
 }
@@ -110,7 +247,7 @@ h3 {
   font-weight: 200;
 }
 h3 span {
-  color: #55B8FF;
+  color: #55b8ff;
   font-style: italic !important;
   font-weight: 400;
 }
@@ -631,7 +768,7 @@ main .wrapper .main-right button {
 .banner {
   padding: 0.5rem 4rem;
   gap: 2rem;
-  background-color: #F5FBFF;
+  background-color: #f5fbff;
 }
 
 footer .wrapper {
